// Copyright 2025 The ODML Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package litert.lm.proto;

option java_multiple_files = true;
option java_outer_classname = "ToolCallOuterClass";

enum NullValue {
  NULL_VALUE = 0;
}

message Value {
  oneof kind {
    NullValue null_value = 1;
    double number_value = 2;
    string string_value = 3;
    bool bool_value = 4;
    Struct struct_value = 5;
    ListValue list_value = 6;
  }
}

message Field {
  string name = 1;
  Value value = 2;
}

message Struct {
  repeated Field fields = 1;
}

message ListValue {
  repeated Value values = 1;
}

message ToolCall {
  string name = 1;
  Struct arguments = 2;
}

message ToolCalls {
  repeated ToolCall tool_calls = 1;
}
